add admin policy editing and product rep tags
